--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "description": "A ticket (bug) tracking software",
   "scripts": {
-    "setup": "cd server && npm install && cd ../client && npm install",
-    "server": "cd server && npm run server",
-    "client": "cd client && npm start",
+    "setup": "npm install --prefix server && npm install --prefix client",
+    "server": "npm run server --prefix server",
+    "client": "npm start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "repository": {
