--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "date-fns": "^2.28.0",
     "firebase": "^9.6.8",
     "moment": "^2.29.1",
+    "mui-datatables": "^3.8.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.2",
