--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
+    "animated-number-react": "^0.1.2",
     "axios": "^0.26.1",
     "date-fns": "^2.28.0",
     "firebase": "^9.6.8",
