--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.26.1",
     "date-fns": "^2.28.0",
     "firebase": "^9.6.8",
+    "material-ui-confirm": "^3.0.3",
     "moment": "^2.29.1",
     "mui-datatables": "^3.8.5",
     "react": "^17.0.2",
